--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 body{
     background-color: hsl(212, 45%, 89%);
     font-family:'Outfit', sans-serif;
+    display:grid;
+    place-items: center;
+    min-height:100vh;
 }
 
 h1{
